crates/plotnik-lib/tests/02-parser/recovery_validation/pipe_in_sequence.txt
{(a) | (b)}
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:6
  |
1 | {(a) | (b)}
  |      ^
  |
help: remove the `|`
  |
1 - {(a) | (b)}
1 + {(a)  (b)}
  |
